testsuite/tests/linear/should_fail/Linear5.stderr

Linear5.hs:7:20: error:
    • Couldn't match expected multiplicity ‘1’ of variable ‘n’ with actual multiplicity ‘0’
    • In an equation for ‘incorrectEqn’: incorrectEqn False n = 0
